overlays/production/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: dragonfly
  ports:
    - port: 6379
      targetPort: 6379
